# InitParser

./: .clang-format  .gitignore  CMakeLists.txt  InitEntry.cpp  InitEntry.h  InitException.cpp  InitException.h  InitFile.cpp  InitFile.h  InitSection.cpp  InitSection.h  InitUtils.cpp  InitUtils.h  README.md  main.cpp  problem.init  sample.init  test.init
